feat: showByUid
